    ADDED: Useractions: added checkbox "enabled"
           and run mode option "Run in embedded terminal emulator"
    ADDED: the description of a dir contains its size if it is known

     ARCH: MediaButton uses Solid for medium detection
     ARCH: QuickSearch is moved to KrView from Detailed/Brief views
     ARCH: Keyboard handling is moved to KrView from Detailed/Brief views

    FIXED: Konfigurator has scrollbars if necessary.
    FIXED: [ 2027518 ] Does not build with -DBUILD_SHARED_LIBS:BOOL=ON
           (thanks to Funda Wang)
    FIXED: [ 2041732 ] Krusader 2.0.0 beta1 missing title bar under Compiz
           (thanks to Danny Baumann for the patch)
    FIXED: [ 2023623 ] Krusader kept running after closing the main window
    FIXED: [ 1671543 ] horizontal/vertical mode fix in the Window menu
    FIXED: [ 1845105 ] mimetype magic can be disabled again
    FIXED: [ 2062651 ] Ctrl+Up selects the URL in the origin editbox
    FIXED: [ 1988893 ] konsole is started in a wrong directory
           please set "konsole --workdir %d" for the terminal (Konfigurator)
           as Krusader won't fix your config automatically
    FIXED: KDE4 workaround: no colors for synchronizer
    FIXED: MediaButton doesn't notice unmounted pen drives+CD/DVD-s
    FIXED: "local network" bookmark didn't work
    FIXED: bookmark menu was not always closed after opening a bookmark
    FIXED: [ 2017011 ] Crash when changing the Qt theme
    FIXED: icons for symlinks are corrupted
    FIXED: [ 2023599 ] start root mode Krusader works again (thanks to gladiac)
    FIXED: [ 1980765 ] error at creating ../dir directory
    FIXED: [ 2014344 ] CTRL-C (copy) does not work in internal editor
    FIXED: Viewing directories are disabled to prevent KDE 4 crash
    FIXED: [Debian: 492955] useraction's availability section was dumped to
           "command" element. (thanks Iván Forcada Atienza)
    FIXED: Do not duplicate menu entries in UserAction menu while still not crashing when