@@ -9,6 +9,8 @@
      ARCH: QuickSearch is moved to KrView from Detailed/Brief views
      ARCH: Keyboard handling is moved to KrView from Detailed/Brief views
 
+    FIXED: Konfigurator doesn't detect every mimetype for "zip" files
+    FIXED: Konfigurator keeps its original size
     FIXED: Konfigurator has scrollbars if necessary.
     FIXED: [ 2027518 ] Does not build with -DBUILD_SHARED_LIBS:BOOL=ON
            (thanks to Funda Wang)
